<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="25dp"
    android:paddingRight="25dp">
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp"
        android:gravity="center_vertical">
        <ImageView android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@mipmap/icon_facebook"/>
        <TextView
            android:id="@+id/tv_facebook_login"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/face_login"
            android:layout_marginLeft="20dp"
            android:gravity="center_vertical"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:background="@drawable/bg_stroke_gray"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_my_downloads"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <TextView android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:text="@string/label_download"
            android:gravity="center_vertical"/>
        <ImageView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/icon_to"/>
    </LinearLayout>
    <View android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider_line"
        />
    <LinearLayout
        android:id="@+id/ll_history"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:visibility="gone">
        <TextView android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:text="@string/label_history"
            android:gravity="center_vertical"/>
        <ImageView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/icon_to"/>
    </LinearLayout>
    <View android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider_line"
        android:visibility="gone"
        />
    <LinearLayout
        android:id="@+id/ll_language"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <TextView android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:text="@string/label_language"
            android:gravity="center_vertical"/>
        <TextView
            android:id="@+id/tv_language"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:text="English"
            android:gravity="center_vertical"
            android:layout_marginRight="10dp"/>
        <ImageView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/icon_to"/>
    </LinearLayout>
    <View android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider_line"
        />
    <LinearLayout
        android:id="@+id/ll_check_update"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <TextView android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:text="@string/label_check_update"
            android:gravity="center_vertical"/>
        <TextView
            android:id="@+id/tv_version"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:text="V1.0.0"
            android:gravity="center_vertical"
            android:layout_marginRight="10dp"/>
        <ImageView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/icon_to"/>
    </LinearLayout>
    <View android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider_line"
        />
    <LinearLayout
        android:id="@+id/ll_pic_policy"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <TextView android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:text="@string/label_pic_policy"
            android:gravity="center_vertical"/>
        <ImageView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/icon_to"/>
    </LinearLayout>
    <View android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider_line"
        />
    <LinearLayout
        android:id="@+id/ll_terms_use"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <TextView android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:text="@string/label_terms_use"
            android:gravity="center_vertical"/>
        <ImageView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/icon_to"/>
    </LinearLayout>

</LinearLayout>