<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/ll_add_fav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="16dp">

        <ImageView
            android:id="@+id/iv_add_fav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_video_fav" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"

            android:gravity="center"
            android:text="@string/label_fav"
            android:textColor="@color/text_color_333333"
            android:textSize="14sp" />
    </LinearLayout>



    <LinearLayout
        android:id="@+id/ll_download"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="16dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_video_dow" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/download"
            android:textColor="@color/text_color_333333"
            android:textSize="14sp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="16dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_video_share" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/share"
            android:textColor="@color/text_color_333333"
            android:textSize="14sp" />
    </LinearLayout>
</LinearLayout>