<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.dueeeke.dkplayer.widget.videoview.ListIjkVideoView
        android:id="@+id/video_player"
        android:layout_width="match_parent"
        android:layout_height="240dp" />

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:src="@mipmap/icon_back"/>

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_below="@+id/video_player"
        android:layout_marginTop="11dp"
        android:text=""
        android:textColor="@color/text_color_333333"
        android:textSize="16sp" />
    <TextView
        android:id="@+id/tvContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/tv_title"
        android:text=""
        android:textSize="15sp"
        android:textColor="@color/text_color_333333"
        />
    <TextView
        android:id="@+id/tvTags"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/tvContent"
        android:text=""
        android:textSize="13sp"
        android:textColor="@color/color_666666"
        />
    <LinearLayout
        android:id="@+id/ll_ope"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_below="@+id/tvTags"
        android:layout_marginTop="15dp"
        android:gravity="center">
        <LinearLayout
            android:id="@+id/ll_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">
        <ImageView
            android:id="@+id/iv_like"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@mipmap/ic_video_fav_gray"
            />
            <TextView
                android:id="@+id/tv_like"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Favourite"
                android:textColor="@color/color_666666"
                android:textSize="12sp"
                android:layout_marginTop="5dp"
                />
        </LinearLayout>
        <View android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"/>
    <LinearLayout
        android:id="@+id/ll_download"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <ImageView
            android:id="@+id/iv_download"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@mipmap/ic_video_dow_gray"/>
        <TextView
            android:id="@+id/tv_download"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_video_dow_gray"
            android:layout_marginTop="5dp"
            android:text="@string/download"/>
    </LinearLayout>

        <View android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"/>
    <LinearLayout
        android:id="@+id/ll_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <ImageView
            android:id="@+id/iv_share"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@mipmap/ic_share_gray"/>
        <TextView
            android:id="@+id/tv_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_share_gray"
            android:layout_marginTop="5dp"
            android:text="@string/share"/>
    </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="0.7dp"
        android:layout_marginTop="11dp"
        android:background="@color/divider_line"
        android:layout_below="@+id/ll_ope"/>
    <com.social.preserve.ui.views.HotokRefreshLayout

        android:id="@+id/video_detail_RefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/divider"
        >
    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_other_videos"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />
    </com.social.preserve.ui.views.HotokRefreshLayout>
</RelativeLayout>